CBA-367: Missing runs-on in ci-develop.yml

--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -12,6 +12,7 @@ jobs:
   tag-submission-image:
     name: "Tag the submission image on ECR with the master commit hash"
     if: github.base_ref == 'master' && github.event.action == 'closed' && github.event.pull_request.merged
+    runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials if this is a PR close
         uses: aws-actions/configure-aws-credentials@v1
@@ -117,6 +118,7 @@ jobs:
   tag-distribution-image:
     name: "Tag the distribution image on ECR with the master commit hash"
     if: github.base_ref == 'master' && github.event.action == 'closed' && github.event.pull_request.merged
+    runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials if this is a PR close
         uses: aws-actions/configure-aws-credentials@v1
