CBA-161 : enabled cloudwatch metrics in favour of prometheus

--- a/services/submission/src/main/resources/application-dev.yml
+++ b/services/submission/src/main/resources/application-dev.yml
@@ -17,3 +17,9 @@ services:
 logging:
   level:
     app.coronawarn: DEBUG
+
+management:
+  metrics:
+    export:
+      cloudwatch:
+        enabled: false
