--- a/services/submission/pom.xml
+++ b/services/submission/pom.xml
@@ -55,7 +55,7 @@
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-registry-prometheus</artifactId>
+      <artifactId>micrometer-registry-cloudwatch</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
@@ -67,6 +67,10 @@
       <artifactId>wiremock-jre8</artifactId>
       <version>2.26.3</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-cloudwatch2</artifactId>
     </dependency>
   </dependencies>
 
