--- a/services/submission/src/main/resources/application.yaml
+++ b/services/submission/src/main/resources/application.yaml
@@ -78,12 +78,21 @@ management:
   endpoints:
     web:
       exposure:
-        include: 'health, prometheus'
+        include: 'health'
   metrics:
     export:
-      prometheus:
+      cloudwatch:
         enabled: true
+        namespace: coronalert-test
+        step: 5s
+        numThreads: 10
+        batchSize: 10
 
+
+cloud:
+  aws:
+    credentials:
+      useDefaultAwsCredentialsChain: true
 
 server:
   shutdown: graceful
