CBA-91: prometheus metrics in favor of micrometer-cloudwatch

--- a/services/submission/src/main/resources/application.yaml
+++ b/services/submission/src/main/resources/application.yaml
@@ -82,7 +82,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: 'health'
+        include: 'health', 'prometheus'
   metrics:
     export:
       prometheus:
