--- a/services/submission/src/main/resources/application.yaml
+++ b/services/submission/src/main/resources/application.yaml
@@ -82,7 +82,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: 'health', 'prometheus'
+        include: 'health, prometheus'
   metrics:
     export:
       prometheus:
