--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -105,6 +105,45 @@ jobs:
           cluster: ${{ secrets.CLUSTER_NAME_DEV }}
           wait-for-service-stability: false
 
+  deploy-dev-submission-quartz:
+    name: "Deploy the quartz submission service to the dev environment"
+    runs-on: ubuntu-latest
+    if: github.base_ref == 'development' && github.event.action == 'closed' && github.event.pull_request.merged
+    needs:
+      - build-submission
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV_PUSHECR }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV_PUSHECR }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Retrieve Task Definition for external service on DEV
+        run: |
+          aws ecs describe-task-definition --task-definition "${{ secrets.ECS_TASK_FAMILY_SUBMISSION_DEV }}-quartz" --query taskDefinition > task-definition.json
+      - name: Set image name as output
+        id: set-image-output
+        run: |
+          echo "::set-output name=image::${{ secrets.ECR_REPO_HOST }}/${{ secrets.ECR_REPO_NAME_SUBMISSION }}:${GITHUB_SHA}"
+      - name: Update Task Definition for DEV with new image
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: "${{ secrets.ECS_CONTAINER_NAME_SUBMISSION_DEV }}-quartz"
+          image: "${{ steps.set-image-output.outputs.image }}"
+      - name: Get service to update
+        id: set-service-output
+        run: |
+          echo "::set-output name=service::$(aws ecs list-services --cluster ${{ secrets.CLUSTER_NAME_DEV }} --output text | grep SubmissionQua | awk -F'/' '{print $2}')"
+      - name: Deploy services with new task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ${{ steps.set-service-output.outputs.service }}
+          cluster: ${{ secrets.CLUSTER_NAME_DEV }}
+          wait-for-service-stability: false
+
   deploy-dev-submission:
     name: "Deploy the external submission service to the dev environment"
     runs-on: ubuntu-latest
@@ -180,6 +219,45 @@ jobs:
         id: set-service-output
         run: |
           echo "::set-output name=service::$(aws ecs list-services --cluster ${{ secrets.CLUSTER_NAME_TST }} --output text | grep SubmissionInt | awk -F'/' '{print $2}')"
+      - name: Deploy services with new task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ${{ steps.set-service-output.outputs.service }}
+          cluster: ${{ secrets.CLUSTER_NAME_TST }}
+          wait-for-service-stability: false
+
+  deploy-tst-submission-quartz:
+    name: "Deploy the quartz submission service to the tst environment"
+    runs-on: ubuntu-latest
+    if: github.base_ref == 'development' && github.event.action == 'closed' && github.event.pull_request.merged
+    needs:
+      - build-submission
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_TST_PUSHECR }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_TST_PUSHECR }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Retrieve Task Definition for external service on TST
+        run: |
+          aws ecs describe-task-definition --task-definition "${{ secrets.ECS_TASK_FAMILY_SUBMISSION_TST }}-quartz" --query taskDefinition > task-definition.json
+      - name: Set image name as output
+        id: set-image-output
+        run: |
+          echo "::set-output name=image::${{ secrets.ECR_REPO_HOST }}/${{ secrets.ECR_REPO_NAME_SUBMISSION }}:${GITHUB_SHA}"
+      - name: Update Task Definition for TST with new image
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: "${{ secrets.ECS_CONTAINER_NAME_SUBMISSION_TST }}-quartz"
+          image: "${{ steps.set-image-output.outputs.image }}"
+      - name: Get service to update
+        id: set-service-output
+        run: |
+          echo "::set-output name=service::$(aws ecs list-services --cluster ${{ secrets.CLUSTER_NAME_TST }} --output text | grep SubmissionQua | awk -F'/' '{print $2}')"
       - name: Deploy services with new task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
