--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -69,6 +69,45 @@ jobs:
           cluster: ${{ secrets.CLUSTER_NAME_STG }}
           wait-for-service-stability: false
 
+  deploy-stg-submission-quartz:
+    name: "Deploy the quartz submission service to the stg environment"
+    runs-on: ubuntu-latest
+    if: github.base_ref == 'master' && github.event.action == 'closed' && github.event.pull_request.merged
+    needs:
+      - tag-submission-image
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STG_PUSHECR }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STG_PUSHECR }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Retrieve Task Definition for external service on STG
+        run: |
+          aws ecs describe-task-definition --task-definition "${{ secrets.ECS_TASK_FAMILY_SUBMISSION_STG }}-quartz" --query taskDefinition > task-definition.json
+      - name: Set image name as output
+        id: set-image-output
+        run: |
+          echo "::set-output name=image::${{ secrets.ECR_REPO_HOST }}/${{ secrets.ECR_REPO_NAME_SUBMISSION }}:${GITHUB_SHA}"
+      - name: Update Task Definition for STG with new image
+        id: render-task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: "${{ secrets.ECS_CONTAINER_NAME_SUBMISSION_STG }}-quartz"
+          image: "${{ steps.set-image-output.outputs.image }}"
+      - name: Get service to update
+        id: set-service-output
+        run: |
+          echo "::set-output name=service::$(aws ecs list-services --cluster ${{ secrets.CLUSTER_NAME_STG }} --output text | grep SubmissionQua | awk -F'/' '{print $2}')"
+      - name: Deploy services with new task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
+          service: ${{ steps.set-service-output.outputs.service }}
+          cluster: ${{ secrets.CLUSTER_NAME_STG }}
+          wait-for-service-stability: false
+
   deploy-stg-submission:
     name: "Deploy the external submission service to the stg environment"
     runs-on: ubuntu-latest
